csrc/janet.h

/* Use type punning for GC objects */
typedef struct JanetGCObject JanetGCObject;
typedef struct JanetTable JanetTable;
typedef struct JanetFiber JanetFiber;
typedef struct JanetKV JanetKV;
typedef struct JanetRegExt JanetRegExt;
typedef struct JanetMethod JanetMethod;
typedef struct JanetView JanetView;
typedef struct JanetByteView JanetByteView;
typedef struct JanetDictView JanetDictView;
typedef struct JanetRange JanetRange;
typedef struct JanetRNG JanetRNG;
/* Basic types for all Janet Values */
typedef enum JanetType {
    JANET_NUMBER,
    JANET_NIL,
    JANET_BOOLEAN,
    JANET_FIBER,
    JANET_STRING,
    JANET_SYMBOL,
    JANET_KEYWORD,
    JANET_ARRAY,
    JANET_TUPLE,
    JANET_TABLE,
    JANET_STRUCT,
    JANET_BUFFER,
    JANET_FUNCTION,
    JANET_CFUNCTION,
    JANET_ABSTRACT,
    JANET_POINTER
} JanetType;
typedef union Janet Janet;
union Janet {
    uint64_t u64;
    int64_t i64;
    double number;
    void *pointer;
};
typedef union Janet Janet;
union Janet {
    struct {
#ifdef JANET_BIG_ENDIAN
        uint32_t type;
        union {
            int32_t integer;
            void *pointer;
        } payload;
#else
        union {
            int32_t integer;
            void *pointer;
        } payload;
        uint32_t type;
#endif
    } tagged;
    double number;
    uint64_t u64;
};
typedef struct Janet Janet;
struct Janet {
    union {
        uint64_t u64;
        double number;
        int32_t integer;
        void *pointer;
        const void *cpointer;
    } as;
    JanetType type;
};
/* C functions */
typedef Janet(*JanetCFunction)(int32_t argc, Janet *argv);
/* Typedefs */
typedef struct JanetListenerState JanetListenerState;
/* Interface for state machine based event loop */
struct JanetListenerState {
    JanetListener machine;
    JanetFiber *fiber;
    JanetStream *stream;
    void *event; /* Used to pass data from asynchronous IO event. Contents depend on both
                    implementation of the event loop and the particular event. */
#ifdef JANET_WINDOWS
    void *tag; /* Used to associate listeners with an overlapped structure */
    int bytes; /* Used to track how many bytes were transfered. */
#endif
    /* internal */
    size_t _index;
    int _mask;
    JanetListenerState *_next;
};
/* GC Object type pun. The lower 16 bits of flags are reserved for the garbage collector,
 * but the upper 16 can be used per type for custom flags. The current collector is a linked
 * list of blocks, which is naive but works. */
struct JanetGCObject {
    int32_t flags;
    union {
        JanetGCObject *next;
        int32_t refcount; /* For threaded abstract types */
    } data;
};
/* A lightweight green thread in janet. Does not correspond to
 * operating system threads. */
struct JanetFiber {
    JanetGCObject gc; /* GC Object stuff */
    int32_t flags; /* More flags */
    int32_t frame; /* Index of the stack frame */
    int32_t stackstart; /* Beginning of next args */
    int32_t stacktop; /* Top of stack. Where values are pushed and popped from. */
    int32_t capacity; /* How big is the stack memory */
    int32_t maxstack; /* Arbitrary defined limit for stack overflow */
    JanetTable *env; /* Dynamic bindings table (usually current environment). */
    Janet *data; /* Dynamically resized stack memory */
    JanetFiber *child; /* Keep linked list of fibers for restarting pending fibers */
    Janet last_value; /* Last returned value from a fiber */
#ifdef JANET_EV
    /* These fields are only relevant for fibers that are used as "root fibers" -
     * that is, fibers that are scheduled on the event loop and behave much like threads
     * in a multi-tasking system. It would be possible to move these fields to a new
     * type, say "JanetTask", that as separate from fibers to save a bit of space. */
    JanetListenerState *waiting;
    uint32_t sched_id; /* Increment everytime fiber is scheduled by event loop */
    void *supervisor_channel; /* Channel to push self to when complete */
#endif
};
/* A mutable associative data type. Backed by a hashtable. */
struct JanetTable {
    JanetGCObject gc;
    int32_t count;
    int32_t capacity;
    int32_t deleted;
    JanetKV *data;
    JanetTable *proto;
};
/* A key value pair in a struct or table */
struct JanetKV {
    Janet key;
    Janet value;
};
struct JanetRegExt {
    const char *name;
    JanetCFunction cfun;
    const char *documentation;
    const char *source_file;
    int32_t source_line;
};
struct JanetMethod {
    const char *name;
    JanetCFunction cfun;
};
struct JanetView {
    const Janet *items;
    int32_t len;
};
struct JanetByteView {
    const uint8_t *bytes;
    int32_t len;
};
struct JanetDictView {
    const JanetKV *kvs;
    int32_t len;
    int32_t cap;
};
struct JanetRange {
    int32_t start;
    int32_t end;
};
struct JanetRNG {
    uint32_t a, b, c, d;
    uint32_t counter;
};
typedef struct JanetFile JanetFile;
struct JanetFile {
    FILE *file;
    int32_t flags;
};
/* For janet_try and janet_restore */
typedef struct {
    /* old state */
    int32_t stackn;
    int gc_handle;
    JanetFiber *vm_fiber;
    jmp_buf *vm_jmp_buf;
    Janet *vm_return_reg;
    /* new state */
    jmp_buf buf;
    Janet payload;
} JanetTryState;