expanded.rs

#[automatically_derived]
impl ::core::fmt::Debug for JanetRegExt {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field5_finish(
            f,
            "JanetRegExt",
            "name",
            &&self.name,
            "cfun",
            &&self.cfun,
            "documentation",
            &&self.documentation,
            "source_file",
            &&self.source_file,
            "source_line",
            &&self.source_line,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetRegExt {}
#[automatically_derived]
impl ::core::clone::Clone for JanetRegExt {
    #[inline]
    fn clone(&self) -> JanetRegExt {
        let _: ::core::clone::AssertParamIsClone<*const ::libc::c_char>;
        let _: ::core::clone::AssertParamIsClone<JanetCFunction>;
        let _: ::core::clone::AssertParamIsClone<*const ::libc::c_char>;
        let _: ::core::clone::AssertParamIsClone<*const ::libc::c_char>;
        let _: ::core::clone::AssertParamIsClone<i32>;
        *self
    }
}
#[repr(C)]
pub struct JanetMethod {
    pub name: *const ::libc::c_char,
    pub cfun: JanetCFunction,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetMethod {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field2_finish(
            f,
            "JanetMethod",
            "name",
            &&self.name,
            "cfun",
            &&self.cfun,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetMethod {}
#[automatically_derived]
impl ::core::clone::Clone for JanetMethod {
    #[inline]
    fn clone(&self) -> JanetMethod {
        let _: ::core::clone::AssertParamIsClone<*const ::libc::c_char>;
        let _: ::core::clone::AssertParamIsClone<JanetCFunction>;
        *self
    }
}
#[repr(C)]
pub struct JanetView {
    pub items: *const Janet,
    pub len: i32,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetView {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field2_finish(
            f,
            "JanetView",
            "items",
            &&self.items,
            "len",
            &&self.len,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetView {}
#[automatically_derived]
impl ::core::clone::Clone for JanetView {
    #[inline]
    fn clone(&self) -> JanetView {
        let _: ::core::clone::AssertParamIsClone<*const Janet>;
        let _: ::core::clone::AssertParamIsClone<i32>;
        *self
    }
}
#[repr(C)]
pub struct JanetByteView {
    pub bytes: *const u8,
    pub len: i32,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetByteView {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field2_finish(
            f,
            "JanetByteView",
            "bytes",
            &&self.bytes,
            "len",
            &&self.len,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetByteView {}
#[automatically_derived]
impl ::core::clone::Clone for JanetByteView {
    #[inline]
    fn clone(&self) -> JanetByteView {
        let _: ::core::clone::AssertParamIsClone<*const u8>;
        let _: ::core::clone::AssertParamIsClone<i32>;
        *self
    }
}
#[repr(C)]
pub struct JanetDictView {
    pub kvs: *const JanetKV,
    pub len: i32,
    pub cap: i32,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetDictView {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field3_finish(
            f,
            "JanetDictView",
            "kvs",
            &&self.kvs,
            "len",
            &&self.len,
            "cap",
            &&self.cap,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetDictView {}
#[automatically_derived]
impl ::core::clone::Clone for JanetDictView {
    #[inline]
    fn clone(&self) -> JanetDictView {
        let _: ::core::clone::AssertParamIsClone<*const JanetKV>;
        let _: ::core::clone::AssertParamIsClone<i32>;
        *self
    }
}
#[repr(C)]
pub struct JanetRange {
    pub start: i32,
    pub end: i32,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetRange {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field2_finish(
            f,
            "JanetRange",
            "start",
            &&self.start,
            "end",
            &&self.end,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetRange {}
#[automatically_derived]
impl ::core::clone::Clone for JanetRange {
    #[inline]
    fn clone(&self) -> JanetRange {
        let _: ::core::clone::AssertParamIsClone<i32>;
        *self
    }
}
#[repr(C)]
pub struct JanetRNG {
    pub a: u32,
    pub b: u32,
    pub c: u32,
    pub d: u32,
    pub counter: u32,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetRNG {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field5_finish(
            f,
            "JanetRNG",
            "a",
            &&self.a,
            "b",
            &&self.b,
            "c",
            &&self.c,
            "d",
            &&self.d,
            "counter",
            &&self.counter,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetRNG {}
#[automatically_derived]
impl ::core::clone::Clone for JanetRNG {
    #[inline]
    fn clone(&self) -> JanetRNG {
        let _: ::core::clone::AssertParamIsClone<u32>;
        *self
    }
}
#[repr(C)]
pub struct JanetFile {
    pub file: *mut FILE,
    pub flags: i32,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetFile {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field2_finish(
            f,
            "JanetFile",
            "file",
            &&self.file,
            "flags",
            &&self.flags,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetFile {}
#[automatically_derived]
impl ::core::clone::Clone for JanetFile {
    #[inline]
    fn clone(&self) -> JanetFile {
        let _: ::core::clone::AssertParamIsClone<*mut FILE>;
        let _: ::core::clone::AssertParamIsClone<i32>;
        *self
    }
}
#[repr(C)]
pub struct JanetTryState {
    pub stackn: i32,
    pub gc_handle: ::libc::c_int,
    pub vm_fiber: *mut JanetFiber,
    pub vm_jmp_buf: *mut jmp_buf,
    pub vm_return_reg: *mut Janet,
    pub buf: jmp_buf,
    pub payload: Janet,
}
#[automatically_derived]
impl ::core::marker::Copy for JanetTryState {}
#[automatically_derived]
impl ::core::clone::Clone for JanetTryState {
    #[inline]
    fn clone(&self) -> JanetTryState {
        let _: ::core::clone::AssertParamIsClone<i32>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        let _: ::core::clone::AssertParamIsClone<*mut JanetFiber>;
        let _: ::core::clone::AssertParamIsClone<*mut jmp_buf>;
        let _: ::core::clone::AssertParamIsClone<*mut Janet>;
        let _: ::core::clone::AssertParamIsClone<jmp_buf>;
        let _: ::core::clone::AssertParamIsClone<Janet>;
        *self
    }
}
